<resources>
    <string name="app_name">Mappin</string>
    <string name="app_logo">App Logo</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="recent_projects">Recent Projects</string>
    <string name="welcome_back">Welcome back to Mappin</string>
    <string name="welcome">Welcome to Mappin</string>
    <string name="open_local_file">Open local file</string>
    <string name="open_cloud_file">Open cloud file</string>
    <string name="select_project">Select project</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="cloud_storage">Cloud Storage</string>
    <string name="import_project_from_folder">Import Project from Folder</string>
    <string name="import_project_from_zip">Import Project from ZIP</string>
    <string name="online_point">Online Point</string>
    <string name="online_poly">Online Polygon</string>
    <string name="google_hybrid">Google Hybrid</string>
    <string name="osm_standard">OSM Standard</string>
    <string name="work_in_progress">Work in progress…</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="btn_menu">btn_menu</string>
    <string name="btn_search">btn_search</string>
    <string name="search_view">search_view</string>
    <string name="btn_settings">btn_settings</string>
    <string name="btn_cloud_nav">btn_cloud_nav</string>
    <string name="settings">Settings</string>
    <string name="title_cloud_maps">Cloud Maps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="online_point_features">Online Point Features</string>
    <string name="btn_add_point_feature">btn add point feature</string>
    <string name="btn_delete_point_feature">btn delete point feature</string>
    <string name="selected_item">Selected item:</string>
    <string name="dropdown_items">dropdown_items</string>
    <string name="online_poly_features">Online Poly Features</string>
    <string name="datepicker_format">dd/MM/yyyy</string>
    <string name="id">id</string>
    <string name="orden">orden</string>
    <string name="cod_prod">cod_prod</string>
    <string name="prov">prov</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <string name="pointer">pointer</string>
    <string name="x">X:</string>
    <string name="y">Y:</string>
    <string name="length">Length:</string>
    <string name="area">Area:</string>
    <string-array name="tipo_menu">
        <item>Mecanizada</item>
        <item>Riego</item>
        <item>Secano</item>
        <item>Otro</item>
    </string-array>
    <string-array name="tpo_menu">
        <item>Cliente agrosilo</item>
        <item>Prospecto</item>
    </string-array>
    <string-array name="estado_menu">
        <item>Compra</item>
        <item>No compra cerrado</item>
    </string-array>
    <string-array name="responsabl_menu">
        <item>Alexander Vásquez</item>
        <item>Denis Moreno</item>
        <item>Michael Rodríguez</item>
        <item>Ricardo Espino</item>
        <item>Tatiana Carrera</item>
        <item>Wilson Gómez</item>
    </string-array>
    <string-array name="variedad_menu">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
    </string-array>
</resources>