<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>

        <item
            android:id="@+id/nav_cloud_map"
            android:icon="@drawable/ic_cloud"
            android:title="@string/title_cloud_maps" />

    </group>

    <group>
        <item
            android:id="@+id/nav_online_point"
            android:icon="@drawable/ic_online_point"
            android:title="@string/online_point" />

        <item
            android:id="@+id/nav_online_polygon"
            android:icon="@drawable/ic_online_poli"
            android:title="@string/online_poly" />

    </group>


    <!--<item
        android:id="@+id/navAbout"
        android:icon="@drawable/about_icon"
        android:title="@string/google_hybrid" />

    <item
        android:id="@+id/navExit"
        android:icon="@drawable/exit_icon"
        android:title="@string/exit" />-->

</menu>