<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/custom_marker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <ImageView
        android:id="@+id/iv_pointer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pointer"
        android:src="@drawable/ic_location_pointer"
        app:tint="@color/logo_color2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_pointer"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <com.kudu.mappin.util.CustomTextViewBold
            android:id="@+id/tv_x_coordinate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x" />

        <com.kudu.mappin.util.CustomTextViewBold
            android:id="@+id/tv_y_coordinate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y" />

        <com.kudu.mappin.util.CustomTextViewBold
            android:id="@+id/tv_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/length" />

        <com.kudu.mappin.util.CustomTextViewBold
            android:id="@+id/tv_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area" />
    </LinearLayout>


</RelativeLayout>