<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:contentDescription="@string/app_logo"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher_playstore" />

        <com.kudu.mappin.util.CustomTextView
            android:id="@+id/welcome_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.kudu.mappin.util.CustomButton
        android:id="@+id/btn_cloud_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_logo"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_bg"
        android:text="@string/open_cloud_file"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <com.kudu.mappin.util.CustomButton
        android:id="@+id/btn_local_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_cloud_file"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:text="@string/open_local_file"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <!-- <LinearLayout
         android:id="@+id/recent_projects_linear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_local_file"
         android:layout_marginTop="10dp"
         android:orientation="vertical">

         <com.kudu.mappin.util.CustomTextViewBold
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/recent_projects"
             android:textSize="16sp" />

         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_recent_projects"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="3dp" />

     </LinearLayout>-->


</RelativeLayout>